<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="Glide">Glide- Image Loading Library by BumpTech</string>
    <string name="Udacity">LoadApp- Current repository by Udacity</string>
    <string name="Retrofit">Retrofit- Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_notification_channel_id">download notification</string>
    <string name="download_notification_channel_description">Check Download Status</string>
    <string name="download_channel">download_channel</string>
    <string name="downloadingText">We are loading</string>
    <string name="file_name_text">File Name:</string>
    <string name="status_text">Status:</string>
    <string name="ok_button_text">OK</string>
</resources>
